--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Main Navigation -->
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
             <!-- Logo -->
-            <a href="https://abcd.com" id="logo-container">
+            <a href="https://gpiasiatel.com.bd" id="logo-container">
                 <!-- Logo load hobe JS diye -->
             </a>
 
@@ -95,7 +95,7 @@
             </div>
             <!-- GPI AsiaTel text clickable -->
             <h1 class="text-center text-xl font-bold mt-4">
-                <a href="https://abcd.com" target="_blank" class="text-green-600 hover:underline">GPI AsiaTel</a>
+                <a href="https://gpiasiatel.com.bd" target="_blank" class="text-green-600 hover:underline">GPI AsiaTel</a>
             </h1>
         </div>
     </div>
@@ -117,39 +117,39 @@
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Company</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://abcd.com" class="footer-link">About Us</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Company Organogram</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Awards & Certificates</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Company Gallery</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Our Projects</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">GPI News</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Career</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Notices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">About Us</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Company Organogram</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Awards & Certificates</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Company Gallery</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Our Projects</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">GPI News</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Career</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Notices</a></li>
                     </ul>
                 </div>
                 <!-- Service -->
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Service</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://abcd.com" class="footer-link">Telecom Installation</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Civil Construction</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Site Acquisition</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Power Connection</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Power Upgradation</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Electrical & Grounding works</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Testing & Commissioning RNP & RNO</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Drive Test (DT)</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Telecom Installation</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Civil Construction</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Site Acquisition</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Power Connection</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Power Upgradation</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Electrical & Grounding works</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Testing & Commissioning RNP & RNO</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Drive Test (DT)</a></li>
                     </ul>
                 </div>
                 <!-- Locations -->
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Locations</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://abcd.com" class="footer-link">Offices</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Sub Offices</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">O&M Offices</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Warehouse</a></li>
-                        <li><a href="https://abcd.com" class="footer-link">Maintenance Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Sub Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">O&M Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Warehouse</a></li>
+                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Maintenance Offices</a></li>
                     </ul>
                 </div>
                 <!-- Newsletter -->
@@ -166,7 +166,7 @@
             <div class="border-t border-gray-700 py-4 text-sm text-center">
                 <p>
                     Copyright © 2025 
-                    <a href="https://abcd.com" class="text-green-400">GPI ASIATEL</a>. 
+                    <a href="https://gpiasiatel.com.bd" class="text-green-400">GPI ASIATEL</a>. 
                     All Rights Reserved. Developed by <span class="text-white">Tanimul Haque</span>
                 </p>
             </div>
@@ -177,7 +177,7 @@
         const logoDataUrl = '';
         const logoContainer = document.getElementById('logo-container');
         if (!logoDataUrl) {
-            logoContainer.innerHTML = `<a href="https://abcd.com"><img src="https://placehold.co/150x40/009A00/FFFFFF?text=GPI+AsiaTel" alt="GPI AsiaTel Logo"></a>`;
+            logoContainer.innerHTML = `<a href="https://gpiasiatel.com.bd"><img src="https://placehold.co/150x40/009A00/FFFFFF?text=GPI+AsiaTel" alt="GPI AsiaTel Logo"></a>`;
         }
     </script>
 
