--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
                 <a href="#" class="nav-link">Company ▾</a>
             </div>
 
-            <!-- Search and Contact -->
+            <!-- Contact Button Only -->
             <div class="flex items-center space-x-4">
-                 <button class="text-gray-600 hover:text-green-600">
-                    <!-- Search Icon -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
-                </button>
                 <a href="#" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
             </div>
         </nav>
@@ -93,10 +89,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                 </button>
             </div>
-            <!-- GPI AsiaTel text clickable -->
-            <h1 class="text-center text-xl font-bold mt-4">
-                <a href="https://gpiasiatel.com.bd" target="_blank" class="text-green-600 hover:underline">GPI AsiaTel</a>
-            </h1>
+            <!-- Removed GPI AsiaTel text -->
         </div>
     </div>
     
@@ -111,7 +104,6 @@
     <!-- Footer Section -->
     <footer class="footer-bg text-gray-300 pt-12">
         <div class="container mx-auto px-4">
-            <!-- Footer Widgets -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-8">
                 <!-- Company -->
                 <div>
@@ -162,7 +154,6 @@
                     </form>
                 </div>
             </div>
-            <!-- Copyright -->
             <div class="border-t border-gray-700 py-4 text-sm text-center">
                 <p>
                     Copyright © 2025 
