--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .contact-btn { background-color: #009A00; transition: background-color 0.3s ease; }
         .contact-btn:hover { background-color: #007500; }
         .footer-bg { background-color: #222222; }
-        .search-btn { background-color: #FFA500; }
+        .search-btn { background-color: #009A00; }
         .nav-link { transition: color 0.3s ease; }
         .nav-link:hover { color: #009A00; }
         .footer-link:hover { color: #009A00; }
