--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
             <!-- Logo -->
             <a href="https://gpiasiatel.com.bd" id="logo-container">
-                <!-- Logo load hobe JS diye -->
+                <img src="https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/ca20f4b78f796a5f352677cd0e06aa9fdee4e938/foldername/GPI-AsiaTel-Logo-e1716128485650.png" alt="GPI AsiaTel Logo" class="h-10">
             </a>
 
             <!-- Menu Items -->
@@ -89,7 +89,6 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                 </button>
             </div>
-            <!-- Removed GPI AsiaTel text -->
         </div>
     </div>
     
@@ -163,14 +162,6 @@
             </div>
         </div>
     </footer>
-
-    <script>
-        const logoDataUrl = '';
-        const logoContainer = document.getElementById('logo-container');
-        if (!logoDataUrl) {
-            logoContainer.innerHTML = `<a href="https://gpiasiatel.com.bd"><img src="https://placehold.co/150x40/009A00/FFFFFF?text=GPI+AsiaTel" alt="GPI AsiaTel Logo"></a>`;
-        }
-    </script>
 
 </body>
 </html>
