--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <option>certificates</option>
                     </select>
                 </div>
-                <input id="searchInput" type="text" placeholder="Search by Registration Number..." class="w-full p-2 outline-none">
+                <input id="searchInput" type="text" placeholder="Search Registration Number..." class="w-full p-2 outline-none">
                 <button onclick="handleSearch()" class="search-btn text-white p-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                 </button>
@@ -146,7 +146,7 @@
                 <!-- Newsletter -->
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Newsletter</h3>
-                    <p class="text-sm mb-4">We'll give you just the right amount of love! ❤️ Sign up for our weekly update and be the first to know about our specials and promotions.</p>
+                    <p class="text-sm mb-4">We'll give you just the right amount of love!  Sign up for our weekly update and be the first to know about our specials and promotions.</p>
                     <form>
                         <input type="email" placeholder="Email" class="w-full p-2 rounded-md bg-gray-700 border border-gray-600 text-white outline-none focus:border-green-500">
                         <button type="submit" class="contact-btn w-full mt-2 text-white font-semibold py-2 rounded-md">Send</button>
