--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="max-w-3xl mx-auto flex items-center border-2 border-gray-300 rounded-md overflow-hidden">
                 <div class="px-3 py-2 bg-gray-100">
                     <select class="bg-transparent outline-none text-gray-600">
-                        <option>certificates</option>
+                        <option>Certificates</option>
                     </select>
                 </div>
                 <input id="searchInput" type="text" placeholder="Search Registration Number..." class="w-full p-2 outline-none">
