--- a/result.html
+++ b/result.html
@@ -1,94 +1,250 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>সার্টিফিকেট ফলাফল</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>সার্টিফিকেট ফলাফল</title>
+<style>
+  /* ====== সাধারণ বডি স্টাইল ====== */
+  body {
+    font-family: 'SolaimanLipi', sans-serif;
+    background-color: #f4f6f8;
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    color: #2980b9;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  /* ====== লোডার ====== */
+  #loader {
+    text-align: center;
+    padding: 50px;
+    font-size: 20px;
+    color: #555;
+  }
+
+  /* ====== না পাওয়া ====== */
+  .not-found {
+    text-align: center;
+    padding: 50px;
+    color: #e74c3c;
+  }
+
+  .not-found h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+
+  .not-found p {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  /* ====== সার্টিফিকেট কন্টেইনার ====== */
+  .certificate-container {
+    max-width: 800px;
+    margin: 40px auto;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    overflow: hidden;
+    padding-bottom: 30px;
+  }
+
+  .cert-header {
+    background-color: #2c3e50;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .company-logo {
+    max-height: 80px;
+    object-fit: contain;
+  }
+
+  .cert-body {
+    display: flex;
+    align-items: center;
+    padding: 30px 20px;
+    gap: 20px;
+    flex-wrap: wrap;
+  }
+
+  .profile-picture-container {
+    flex: 0 0 150px;
+    text-align: center;
+  }
+
+  .profile-picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #2980b9;
+  }
+
+  .person-info {
+    flex: 1;
+  }
+
+  .person-info .name {
+    font-size: 28px;
+    margin: 0;
+    color: #2c3e50;
+  }
+
+  .person-info .designation {
+    font-size: 20px;
+    margin: 5px 0;
+    color: #2980b9;
+  }
+
+  .person-info .company {
+    font-size: 18px;
+    color: #555;
+  }
+
+  .cert-details {
+    margin: 20px;
+    padding: 20px;
+    background-color: #ecf0f1;
+    border-radius: 10px;
+  }
+
+  .cert-details h2 {
+    text-align: center;
+    margin-bottom: 15px;
+    color: #2c3e50;
+  }
+
+  .detail-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 0;
+    border-bottom: 1px dashed #bdc3c7;
+    font-size: 16px;
+  }
+
+  .detail-key {
+    font-weight: bold;
+    color: #34495e;
+  }
+
+  .detail-value {
+    color: #2c3e50;
+  }
+
+  .cert-footer {
+    text-align: center;
+    margin-top: 20px;
+    color: #7f8c8d;
+    font-size: 14px;
+  }
+
+  /* ====== রেস্পন্সিভ ====== */
+  @media (max-width: 600px) {
+    .cert-body {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .person-info {
+      flex: none;
+    }
+  }
+
+</style>
 </head>
 <body>
 
-    <div class="certificate-container" id="certificate-container">
-        <div id="loader">লোড হচ্ছে...</div>
-    </div>
+<div class="certificate-container" id="certificate-container">
+    <div id="loader">লোড হচ্ছে...</div>
+</div>
 
-    <div id="not-found" class="not-found" style="display: none;">
-        <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
-        <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
-        <a href="index.html">সার্চ পেজে ফিরে যান</a>
-    </div>
+<div id="not-found" class="not-found" style="display: none;">
+    <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
+    <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
+    <a href="index.html">সার্চ পেজে ফিরে যান</a>
+</div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // ⚠️ এখানে আপনার GitHub রিপোজিটরির Raw data.json ফাইলের লিংকটি দিন
-            const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/refs/heads/main/foldername/data.json';
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/refs/heads/main/foldername/data.json';
+    const urlParams = new URLSearchParams(window.location.search);
+    const regNumber = urlParams.get('reg');
+    const certificateContainer = document.getElementById('certificate-container');
+    const loader = document.getElementById('loader');
+    const notFound = document.getElementById('not-found');
 
-            const urlParams = new URLSearchParams(window.location.search);
-            const regNumber = urlParams.get('reg');
-            const certificateContainer = document.getElementById('certificate-container');
-            const loader = document.getElementById('loader');
-            const notFound = document.getElementById('not-found');
+    if (!regNumber) {
+        loader.style.display = 'none';
+        notFound.style.display = 'block';
+        notFound.querySelector('h2').textContent = 'কোনো রেজিস্ট্রেশন নম্বর পাওয়া যায়নি।';
+        return;
+    }
 
-            if (!regNumber) {
-                loader.style.display = 'none';
+    fetch(GITHUB_DATA_URL)
+        .then(response => response.json())
+        .then(data => {
+            const person = data.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
+            loader.style.display = 'none';
+
+            if (person) {
+                displayCertificate(person);
+            } else {
+                certificateContainer.style.display = 'none';
                 notFound.style.display = 'block';
-                notFound.querySelector('h2').textContent = 'কোনো রেজিস্ট্রেশন নম্বর পাওয়া যায়নি।';
-                return;
             }
-
-            fetch(GITHUB_DATA_URL)
-                .then(response => response.json())
-                .then(data => {
-                    const person = data.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
-                    loader.style.display = 'none';
-
-                    if (person) {
-                        displayCertificate(person);
-                    } else {
-                        certificateContainer.style.display = 'none';
-                        notFound.style.display = 'block';
-                    }
-                })
-                .catch(error => {
-                    console.error('Fetch Error:', error);
-                    loader.style.display = 'none';
-                    certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
-                });
-
-            function displayCertificate(person) {
-                let detailsHtml = '';
-                for (const key in person.details) {
-                    detailsHtml += `
-                        <div class="detail-item">
-                            <span class="detail-key">${key}</span>
-                            <span class="detail-value">${person.details[key]}</span>
-                        </div>`;
-                }
-
-                certificateContainer.innerHTML = `
-                    <header class="cert-header">
-                        <img src="${person.logo_url}" alt="Company Logo" class="company-logo">
-                    </header>
-                    <main class="cert-body">
-                        <div class="profile-picture-container">
-                            <img src="${person.photo_url}" alt="Profile Photo" class="profile-picture">
-                        </div>
-                        <div class="person-info">
-                            <h1 class="name">${person.name}</h1>
-                            <p class="designation">${person.designation}</p>
-                            <p class="company">${person.company}</p>
-                        </div>
-                    </main>
-                    <section class="cert-details">
-                        <h2>বিস্তারিত তথ্য</h2>
-                        ${detailsHtml}
-                    </section>
-                    <footer class="cert-footer">
-                        <p>এটি একটি ডিজিটালভাবে যাচাইকৃত সার্টিফিকেট।</p>
-                    </footer>
-                `;
-            }
+        })
+        .catch(error => {
+            console.error('Fetch Error:', error);
+            loader.style.display = 'none';
+            certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
         });
-    </script>
+
+    function displayCertificate(person) {
+        let detailsHtml = '';
+        for (const key in person.details) {
+            detailsHtml += `
+                <div class="detail-item">
+                    <span class="detail-key">${key}</span>
+                    <span class="detail-value">${person.details[key]}</span>
+                </div>`;
+        }
+
+        certificateContainer.innerHTML = `
+            <header class="cert-header">
+                <img src="${person.logo_url}?raw=true" alt="Company Logo" class="company-logo">
+            </header>
+            <main class="cert-body">
+                <div class="profile-picture-container">
+                    <img src="${person.photo_url}?raw=true" alt="Profile Photo" class="profile-picture">
+                </div>
+                <div class="person-info">
+                    <h1 class="name">${person.name}</h1>
+                    <p class="designation">${person.designation}</p>
+                    <p class="company">${person.company}</p>
+                </div>
+            </main>
+            <section class="cert-details">
+                <h2>বিস্তারিত তথ্য</h2>
+                ${detailsHtml}
+            </section>
+            <footer class="cert-footer">
+                <p>এটি একটি ডিজিটালভাবে যাচাইকৃত সার্টিফিকেট।</p>
+            </footer>
+        `;
+    }
+});
+</script>
+
 </body>
 </html>
