--- a/result.html
+++ b/result.html
@@ -5,35 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
-  body {
-    font-family: 'SolaimanLipi', sans-serif;
-    background-color: #f4f6f8;
-    margin: 0;
-    padding: 0;
-  }
+  /* ====== GENERAL ====== */
+  body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 0; }
+  a { color: #2980b9; text-decoration: none; }
+  a:hover { text-decoration: underline; }
+  #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
+  .not-found { text-align: center; padding: 50px; color: #e74c3c; }
 
-  a {
-    color: #2980b9;
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-
-  #loader {
-    text-align: center;
-    padding: 50px;
-    font-size: 20px;
-    color: #555;
-  }
-
-  .not-found {
-    text-align: center;
-    padding: 50px;
-    color: #e74c3c;
-  }
-
+  /* ====== CERTIFICATE ====== */
   .certificate-container {
     max-width: 900px;
     margin: 40px auto;
@@ -42,138 +21,65 @@
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     overflow: hidden;
     padding-bottom: 30px;
+    page-break-after: always;
   }
+  .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
+  .company-logo { max-height: 80px; object-fit: contain; }
+  .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
+  .profile-picture-container { flex: 0 0 150px; text-align: center; }
+  .profile-picture { width: 150px; height: 150px; border-radius: 50%; object-fit: cover; border: 3px solid #2980b9; }
+  .person-info { flex: 1; }
+  .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; }
+  .person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
+  .person-info .company { font-size: 18px; color: #555; }
+  .cert-details { margin: 20px; padding: 20px; background-color: #ecf0f1; border-radius: 10px; }
+  .cert-details h2 { text-align: center; margin-bottom: 15px; color: #2c3e50; }
+  .detail-item { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px dashed #bdc3c7; font-size: 16px; }
+  .detail-key { font-weight: bold; color: #34495e; }
+  .detail-value { color: #2c3e50; }
 
-  .cert-header {
-    background-color: #2c3e50;
-    padding: 20px;
-    text-align: center;
-  }
-
-  .company-logo {
-    max-height: 80px;
-    object-fit: contain;
-  }
-
-  .cert-body {
-    display: flex;
-    align-items: center;
-    padding: 30px 20px;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-
-  .profile-picture-container {
-    flex: 0 0 150px;
-    text-align: center;
-  }
-
-  .profile-picture {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 3px solid #2980b9;
-  }
-
-  .person-info {
-    flex: 1;
-  }
-
-  .person-info .name {
-    font-size: 28px;
-    margin: 0;
-    color: #2c3e50;
-  }
-
-  .person-info .designation {
-    font-size: 20px;
-    margin: 5px 0;
-    color: #2980b9;
-  }
-
-  .person-info .company {
-    font-size: 18px;
-    color: #555;
-  }
-
-  .cert-details {
-    margin: 20px;
-    padding: 20px;
-    background-color: #ecf0f1;
-    border-radius: 10px;
-  }
-
-  .cert-details h2 {
-    text-align: center;
-    margin-bottom: 15px;
-    color: #2c3e50;
-  }
-
-  .detail-item {
+  /* ====== FOOTER WITH QR & REG ====== */
+  .cert-footer {
     display: flex;
     justify-content: space-between;
-    padding: 8px 0;
-    border-bottom: 1px dashed #bdc3c7;
-    font-size: 16px;
-  }
-
-  .detail-key {
-    font-weight: bold;
-    color: #34495e;
-  }
-
-  .detail-value {
-    color: #2c3e50;
-  }
-
-  .cert-footer {
-    text-align: center;
-    margin-top: 20px;
+    align-items: center;
+    margin: 20px;
+    padding: 10px 20px;
     color: #7f8c8d;
     font-size: 14px;
   }
+  .qr-code { width: 80px; height: 80px; }
+  .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
 
-  /* ====== প্রিন্ট ফ্রেন্ডলি ====== */
+  /* ====== PRINT ====== */
   @media print {
-    body {
-      background-color: #fff;
-    }
-    .certificate-container {
-      box-shadow: none;
-      margin: 0;
-      page-break-after: always;
-    }
-    #loader, .not-found {
-      display: none;
-    }
+    body { background-color: #fff; }
+    .certificate-container { box-shadow: none; margin: 0; }
+    #loader, .not-found { display: none; }
   }
 
-  /* ====== রেস্পন্সিভ ====== */
+  /* ====== RESPONSIVE ====== */
   @media (max-width: 600px) {
-    .cert-body {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .person-info {
-      flex: none;
-    }
+    .cert-body { flex-direction: column; align-items: center; text-align: center; }
+    .person-info { flex: none; }
+    .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
   }
-
 </style>
 </head>
 <body>
 
 <div class="certificate-container" id="certificate-container">
-    <div id="loader">লোড হচ্ছে...</div>
+  <div id="loader">লোড হচ্ছে...</div>
 </div>
 
 <div id="not-found" class="not-found" style="display: none;">
-    <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
-    <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
-    <a href="index.html">সার্চ পেজে ফিরে যান</a>
+  <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
+  <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
+  <a href="index.html">সার্চ পেজে ফিরে যান</a>
 </div>
+
+<!-- QRCode.js লাইব্রেরি -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
@@ -192,56 +98,64 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     fetch(GITHUB_DATA_URL)
-        .then(response => response.json())
-        .then(data => {
-            const person = data.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
-            loader.style.display = 'none';
+      .then(response => response.json())
+      .then(data => {
+        const person = data.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
+        loader.style.display = 'none';
 
-            if (person) {
-                displayCertificate(person);
-            } else {
-                certificateContainer.style.display = 'none';
-                notFound.style.display = 'block';
-            }
-        })
-        .catch(error => {
-            console.error('Fetch Error:', error);
-            loader.style.display = 'none';
-            certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
-        });
+        if (person) {
+            displayCertificate(person);
+        } else {
+            certificateContainer.style.display = 'none';
+            notFound.style.display = 'block';
+        }
+      })
+      .catch(error => {
+        console.error('Fetch Error:', error);
+        loader.style.display = 'none';
+        certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
+      });
 
     function displayCertificate(person) {
         let detailsHtml = '';
         for (const key in person.details) {
             detailsHtml += `
-                <div class="detail-item">
-                    <span class="detail-key">${key}</span>
-                    <span class="detail-value">${person.details[key]}</span>
-                </div>`;
+              <div class="detail-item">
+                <span class="detail-key">${key}</span>
+                <span class="detail-value">${person.details[key]}</span>
+              </div>`;
         }
 
         certificateContainer.innerHTML = `
-            <header class="cert-header">
-                <img src="${person.logo_url}?raw=true" alt="Company Logo" class="company-logo">
-            </header>
-            <main class="cert-body">
-                <div class="profile-picture-container">
-                    <img src="${person.photo_url}?raw=true" alt="Profile Photo" class="profile-picture">
-                </div>
-                <div class="person-info">
-                    <h1 class="name">${person.name}</h1>
-                    <p class="designation">${person.designation}</p>
-                    <p class="company">${person.company}</p>
-                </div>
-            </main>
-            <section class="cert-details">
-                <h2>বিস্তারিত তথ্য</h2>
-                ${detailsHtml}
-            </section>
-            <footer class="cert-footer">
-                <p>এটি একটি ডিজিটালভাবে যাচাইকৃত সার্টিফিকেট।</p>
-            </footer>
+          <header class="cert-header">
+            <img src="${person.logo_url}?raw=true" alt="Company Logo" class="company-logo">
+          </header>
+          <main class="cert-body">
+            <div class="profile-picture-container">
+              <img src="${person.photo_url}?raw=true" alt="Profile Photo" class="profile-picture">
+            </div>
+            <div class="person-info">
+              <h1 class="name">${person.name}</h1>
+              <p class="designation">${person.designation}</p>
+              <p class="company">${person.company}</p>
+            </div>
+          </main>
+          <section class="cert-details">
+            <h2>বিস্তারিত তথ্য</h2>
+            ${detailsHtml}
+          </section>
+          <footer class="cert-footer">
+            <div class="reg-number">রেজিস্ট্রেশন নম্বর: ${person.registration_number}</div>
+            <div id="qrcode" class="qr-code"></div>
+          </footer>
         `;
+
+        // QR কোড জেনারেট
+        new QRCode(document.getElementById("qrcode"), {
+            text: window.location.href,
+            width: 80,
+            height: 80
+        });
     }
 });
 </script>
