--- a/result.html
+++ b/result.html
@@ -5,14 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
-  /* ====== GENERAL ====== */
   body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 0; }
   a { color: #2980b9; text-decoration: none; }
   a:hover { text-decoration: underline; }
   #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
   .not-found { text-align: center; padding: 50px; color: #e74c3c; }
 
-  /* ====== CERTIFICATE ====== */
   .certificate-container {
     max-width: 900px;
     margin: 40px auto;
@@ -21,8 +19,10 @@
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     overflow: hidden;
     padding-bottom: 30px;
+    position: relative;
     page-break-after: always;
   }
+
   .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
   .company-logo { max-height: 80px; object-fit: contain; }
   .cert-body { display: flex; align-items: center; padding: 30px 20px; gap: 20px; flex-wrap: wrap; }
@@ -38,7 +38,6 @@
   .detail-key { font-weight: bold; color: #34495e; }
   .detail-value { color: #2c3e50; }
 
-  /* ====== FOOTER WITH QR & REG ====== */
   .cert-footer {
     display: flex;
     justify-content: space-between;
@@ -47,6 +46,8 @@
     padding: 10px 20px;
     color: #7f8c8d;
     font-size: 14px;
+    position: relative;
+    z-index: 1;
   }
   .qr-code { width: 80px; height: 80px; }
   .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
@@ -55,6 +56,25 @@
   @media print {
     body { background-color: #fff; }
     .certificate-container { box-shadow: none; margin: 0; }
+
+    /* BACKGROUND LOGO / WATERMARK */
+    .certificate-container::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 400px;
+      height: 400px;
+      transform: translate(-50%, -50%);
+      background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/GPI-AsiaTel-Logo-e1716128485650.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      opacity: 0.1;
+      z-index: 0;
+    }
+
+    .certificate-container > * { position: relative; z-index: 1; }
     #loader, .not-found { display: none; }
   }
 
