--- a/result.html
+++ b/result.html
@@ -5,22 +5,27 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>সার্টিফিকেট ফলাফল</title>
 <style>
-  body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 0; }
+  body { font-family: 'SolaimanLipi', sans-serif; background: #f4f6f8; margin: 0; padding: 20px; text-align:center; }
   a { color: #2980b9; text-decoration: none; }
   a:hover { text-decoration: underline; }
   #loader { text-align: center; padding: 50px; font-size: 20px; color: #555; }
   .not-found { text-align: center; padding: 50px; color: #e74c3c; }
 
+  button#downloadPdf {
+    background: #2980b9; color: #fff; border: none; padding: 10px 20px;
+    border-radius: 8px; cursor: pointer; font-size: 16px; margin-bottom: 20px;
+  }
+  button#downloadPdf:hover { background: #1c5980; }
+
   .certificate-container {
     max-width: 900px;
-    margin: 40px auto;
+    margin: 0 auto;
     background: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     overflow: hidden;
     padding-bottom: 30px;
     position: relative;
-    page-break-after: always;
   }
 
   .cert-header { background-color: #2c3e50; padding: 20px; text-align: center; }
@@ -32,11 +37,18 @@
   .person-info .name { font-size: 28px; margin: 0; color: #2c3e50; }
   .person-info .designation { font-size: 20px; margin: 5px 0; color: #2980b9; }
   .person-info .company { font-size: 18px; color: #555; }
-  .cert-details { margin: 20px; padding: 20px; background-color: #ecf0f1; border-radius: 10px; }
-  .cert-details h2 { text-align: center; margin-bottom: 15px; color: #2c3e50; }
-  .detail-item { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px dashed #bdc3c7; font-size: 16px; }
-  .detail-key { font-weight: bold; color: #34495e; }
-  .detail-value { color: #2c3e50; }
+
+  .cert-details { margin: 20px; padding: 10px; display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; }
+  .detail-item {
+    background: #ecf0f1;
+    border: 2px solid #2980b9;
+    border-radius: 10px;
+    padding: 12px;
+    text-align: center;
+    font-size: 16px;
+  }
+  .detail-key { font-weight: bold; color: #34495e; display: block; margin-bottom: 5px; }
+  .detail-value { color: #2c3e50; display: block; font-size: 15px; }
 
   .cert-footer {
     display: flex;
@@ -52,12 +64,9 @@
   .qr-code { width: 80px; height: 80px; }
   .reg-number { font-weight: bold; font-size: 16px; color: #2c3e50; }
 
-  /* ====== PRINT ====== */
   @media print {
     body { background-color: #fff; }
     .certificate-container { box-shadow: none; margin: 0; }
-
-    /* BACKGROUND LOGO / WATERMARK */
     .certificate-container::before {
       content: "";
       position: absolute;
@@ -66,19 +75,17 @@
       width: 400px;
       height: 400px;
       transform: translate(-50%, -50%);
-      background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/GPI-AsiaTel-Logo-e1716128485650.png');
+      background-image: url('https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/WhatsApp_Image_2025-08-28_at_3.14.15_PM-removebg-preview.png');
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
       opacity: 0.1;
       z-index: 0;
     }
-
     .certificate-container > * { position: relative; z-index: 1; }
-    #loader, .not-found { display: none; }
+    #loader, .not-found, #downloadPdf { display: none; }
   }
 
-  /* ====== RESPONSIVE ====== */
   @media (max-width: 600px) {
     .cert-body { flex-direction: column; align-items: center; text-align: center; }
     .person-info { flex: none; }
@@ -87,6 +94,8 @@
 </style>
 </head>
 <body>
+
+<button id="downloadPdf">Download PDF</button>
 
 <div class="certificate-container" id="certificate-container">
   <div id="loader">লোড হচ্ছে...</div>
@@ -98,8 +107,10 @@
   <a href="index.html">সার্চ পেজে ফিরে যান</a>
 </div>
 
-<!-- QRCode.js লাইব্রেরি -->
+<!-- QRCode.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+<!-- html2pdf.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
@@ -109,11 +120,13 @@ document.addEventListener('DOMContentLoaded', function() {
     const certificateContainer = document.getElementById('certificate-container');
     const loader = document.getElementById('loader');
     const notFound = document.getElementById('not-found');
+    const downloadBtn = document.getElementById('downloadPdf');
 
     if (!regNumber) {
         loader.style.display = 'none';
         notFound.style.display = 'block';
         notFound.querySelector('h2').textContent = 'কোনো রেজিস্ট্রেশন নম্বর পাওয়া যায়নি।';
+        downloadBtn.style.display = 'none';
         return;
     }
 
@@ -128,12 +141,14 @@ document.addEventListener('DOMContentLoaded', function() {
         } else {
             certificateContainer.style.display = 'none';
             notFound.style.display = 'block';
+            downloadBtn.style.display = 'none';
         }
       })
       .catch(error => {
         console.error('Fetch Error:', error);
         loader.style.display = 'none';
         certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
+        downloadBtn.style.display = 'none';
       });
 
     function displayCertificate(person) {
@@ -161,7 +176,6 @@ document.addEventListener('DOMContentLoaded', function() {
             </div>
           </main>
           <section class="cert-details">
-            <h2>বিস্তারিত তথ্য</h2>
             ${detailsHtml}
           </section>
           <footer class="cert-footer">
@@ -170,15 +184,28 @@ document.addEventListener('DOMContentLoaded', function() {
           </footer>
         `;
 
-        // QR কোড জেনারেট
+        // QR কোড
         new QRCode(document.getElementById("qrcode"), {
             text: window.location.href,
             width: 80,
             height: 80
         });
     }
+
+    // PDF Download Button
+    downloadBtn.addEventListener('click', function() {
+        const element = document.getElementById('certificate-container');
+        const opt = {
+            margin:       0.5,
+            filename:     'certificate.pdf',
+            image:        { type: 'jpeg', quality: 0.98 },
+            html2canvas:  { scale: 2, logging: false },
+            jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+        };
+        html2pdf().set(opt).from(element).save();
+    });
+
 });
 </script>
-
 </body>
 </html>
