--- a/result.html
+++ b/result.html
@@ -75,7 +75,7 @@
 
   @media (max-width: 600px) {
     .cert-body { flex-direction: column; align-items: center; text-align: center; }
-    .person-info { flex: none; }
+    .person-info { text-align: center; }
     .cert-footer { flex-direction: column; gap: 10px; align-items: center; }
     .detail-item { flex-direction: column; text-align:center; }
   }
@@ -88,8 +88,8 @@
 </div>
 
 <div id="not-found" class="not-found" style="display: none;">
-  <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
-  <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
+  <h2>দুঃখিত, কোনো ফলাফল পাওয়া যায়নি।</h2>
+  <p>আপনার দেওয়া রেজিস্ট্রেশন নম্বরটি সঠিক নয়। অনুগ্রহ করে আবার চেষ্টা করুন।</p>
   <a href="index.html">সার্চ পেজে ফিরে যান</a>
 </div>
 
@@ -97,7 +97,7 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/refs/heads/main/foldername/data.json';
+    const GITHUB_DATA_URL = 'https://raw.githubusercontent.com/gpiasiatel/gpiasiatel/main/foldername/data.json';
     const urlParams = new URLSearchParams(window.location.search);
     const regNumber = urlParams.get('reg');
     const certificateContainer = document.getElementById('certificate-container');
@@ -107,14 +107,19 @@ document.addEventListener('DOMContentLoaded', function() {
     if (!regNumber) {
         loader.style.display = 'none';
         notFound.style.display = 'block';
-        notFound.querySelector('h2').textContent = 'কোনো রেজিস্ট্রেশন নম্বর পাওয়া যায়নি।';
+        notFound.querySelector('h2').textContent = 'কোনো রেজিস্ট্রেশন নম্বর পাওয়া যায়নি।';
         return;
     }
 
     fetch(GITHUB_DATA_URL)
-      .then(response => response.json())
+      .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok ' + response.statusText);
+        }
+        return response.json();
+      })
       .then(data => {
-        const person = data.find(item => item.registration_number.toLowerCase() === regNumber.toLowerCase());
+        const person = data.find(item => item.registration_number && item.registration_number.toLowerCase() === regNumber.toLowerCase());
         loader.style.display = 'none';
 
         if (person) {
@@ -127,38 +132,40 @@ document.addEventListener('DOMContentLoaded', function() {
       .catch(error => {
         console.error('Fetch Error:', error);
         loader.style.display = 'none';
-        certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
+        certificateContainer.innerHTML = '<p style="color: red; text-align: center;">সার্ভার থেকে ডাটা লোড করা যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।</p>';
       });
 
     function displayCertificate(person) {
         let detailsHtml = '';
-        for (const key in person.details) {
-            detailsHtml += `
-              <div class="detail-item">
-                <span class="detail-key">${key}</span>
-                <span class="detail-value">${person.details[key]}</span>
-              </div>`;
+        if (person.details) {
+            for (const key in person.details) {
+                detailsHtml += `
+                  <div class="detail-item">
+                    <span class="detail-key">${key}</span>
+                    <span class="detail-value">${person.details[key]}</span>
+                  </div>`;
+            }
         }
 
         certificateContainer.innerHTML = `
           <header class="cert-header">
-            <img src="${person.logo_url}?raw=true" alt="Company Logo" class="company-logo">
+            <img src="${person.logo_url || ''}?raw=true" alt="Company Logo" class="company-logo" onerror="this.style.display='none'">
           </header>
           <main class="cert-body">
             <div class="profile-picture-container">
-              <img src="${person.photo_url}?raw=true" alt="Profile Photo" class="profile-picture">
+              <img src="${person.photo_url || ''}?raw=true" alt="Profile Photo" class="profile-picture" onerror="this.style.display='none'">
             </div>
             <div class="person-info">
-              <h1 class="name">${person.name}</h1>
-              <p class="designation">${person.designation}</p>
-              <p class="company">${person.company}</p>
+              <h1 class="name">${person.name || 'N/A'}</h1>
+              <p class="designation">${person.designation || 'N/A'}</p>
+              <p class="company">${person.company || 'N/A'}</p>
             </div>
           </main>
           <section class="cert-details">
             ${detailsHtml}
           </section>
           <footer class="cert-footer">
-            <div class="reg-number">রেজিস্ট্রেশন নম্বর: ${person.registration_number}</div>
+            <div class="reg-number">রেজিস্ট্রেশন নম্বর: ${person.registration_number || 'N/A'}</div>
             <div id="qrcode" class="qr-code"></div>
           </footer>
         `;
