--- a/index.html
+++ b/index.html
@@ -127,39 +127,39 @@
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Company</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">About Us</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Company Organogram</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Awards & Certificates</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Company Gallery</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Our Projects</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">GPI News</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Career</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Notices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/about-us/" class="footer-link">About Us</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/organogram/" class="footer-link">Company Organogram</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/awards-certificates/" class="footer-link">Awards & Certificates</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/gallery/" class="footer-link">Company Gallery</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/projects/" class="footer-link">Our Projects</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/posts/" class="footer-link">GPI News</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/career/" class="footer-link">Career</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/notices/" class="footer-link">Notices</a></li>
                     </ul>
                 </div>
                 <!-- Service -->
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Service</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Telecom Installation</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Civil Construction</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Site Acquisition</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Power Connection</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Power Upgradation</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Electrical & Grounding works</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Testing & Commissioning RNP & RNO</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Drive Test (DT)</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/telecom-installation/" class="footer-link">Telecom Installation</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/civil-construction/" class="footer-link">Civil Construction</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Site-Acquisition" class="footer-link">Site Acquisition</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Power-Connection" class="footer-link">Power Connection</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Power-Upgradation" class="footer-link">Power Upgradation</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Electrical-Grounding-works" class="footer-link">Electrical & Grounding works</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Testing-Commissioning-RNP-RNO" class="footer-link">Testing & Commissioning RNP & RNO</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/service/#Drive-Test" class="footer-link">Drive Test (DT)</a></li>
                     </ul>
                 </div>
                 <!-- Locations -->
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Locations</h3>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Offices</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Sub Offices</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">O&M Offices</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Warehouse</a></li>
-                        <li><a href="https://gpiasiatel.com.bd" class="footer-link">Maintenance Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/offices/" class="footer-link">Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/sub-offices/" class="footer-link">Sub Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/om-offices/" class="footer-link">O&M Offices</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/warehouse/" class="footer-link">Warehouse</a></li>
+                        <li><a href="https://gpiasiatel.com.bd/maintenance-offices/" class="footer-link">Maintenance Offices</a></li>
                     </ul>
                 </div>
                 <!-- Newsletter -->
