--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
             <!-- Menu Items -->
             <div class="hidden lg:flex items-center space-x-6 text-gray-700 font-medium">
-                <a href="#" class="nav-link">Home</a>
-                <a href="#" class="nav-link">Service ▾</a>
-                <a href="#" class="nav-link">Products</a>
-                <a href="#" class="nav-link">Projects</a>
-                <a href="#" class="nav-link">Company ▾</a>
+                <a href="https://gpiasiatel.com.bd/" class="nav-link">Home</a>
+                <a href="https://gpiasiatel.com.bd/service/" class="nav-link">Service ▾</a>
+                <a href="https://gpiasiatel.com.bd/items/" class="nav-link">Products</a>
+                <a href="https://gpiasiatel.com.bd/projects/" class="nav-link">Projects</a>
+                <a href="https://gpiasiatel.com.bd/#" class="nav-link">Company ▾</a>
             </div>
 
             <!-- Contact Button Only -->
