--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <!-- Contact Button Only -->
             <div class="flex items-center space-x-4">
-                <a href="#" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
+                <a href="https://gpiasiatel.com.bd/contact-us/" class="contact-btn text-white font-semibold px-5 py-2 rounded-md">Contact Us</a>
             </div>
         </nav>
     </header>
